apps/staging/fbref/nocodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nocodb
spec:
  selector:
    app: nocodb
  ports:
    - port: 8080
      targetPort: 8080
